wrapping issue in almanac slide

--- a/webroot/css/intellistar-32-2008.css
+++ b/webroot/css/intellistar-32-2008.css
@@ -807,7 +807,7 @@
 .almanac .almdate {
     position: absolute;
     color: inherit;
-    width: 300px;
+    white-space: nowrap;
 }
 .almanac .bottomheader .high {
     position: absolute;
